# excel-python

./: .gitignore  Frecuencia.py  Frecuencias.py  IMedible.py  Intervalo.py  MedicionesAgrupacion.py  Muestra.py  README.md  Setup.py  agrupacion.py  config.toml  datos_no_agrupados.py  main.py  pyproject.toml
estadistica_facil/: Agrupacion.py  Frecuencias.py  IMedible.py  Intervalo.py  MedicionesAgrupacion.py  Muestra.py  __init__.py
estadistica_facil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
excel-python/: Agrupacion.py  Frecuencias.py  IMedible.py  Intervalo.py  MedicionesAgrupacion.py  main.py
excel_python/: Agrupacion.py  Frecuencias.py  MedicionesAgrupacion.py  Muestra.py  __init__.py
