[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "estadistica_facil"
authors = [{name = "Benjamín Peralta", email = "benjaminp158@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy>=1.26.4"]
[project.urls]
Home = "https://github.com/PeraBaja/excel-python"


